test/mix2.l1.out
entry: 0 params, 6 locals, 0 temps
5
error: name space does not define struct foo
            looktype	(builtin function)
               entry	(mix2.l1:21)
